@@ -4,6 +4,14 @@
 Note: This file contains a list changes in the 'v2' branch.
 The master branch will rely on the Git repository history.
 
+
+2020-10-25
+
+ - Removed the part of setup_test checks running the binaries with --help, as
+   they fail starting at 3.8. Someone with more time would create a test using
+   pytest-virtualenv.
+
+
 2020-10-17
 
  - Fixed #566: Duplicate postings on entries should count toward distinct
